k8s/patch-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: ai
  annotations:
    external-dns.alpha.kubernetes.io/hostname: openwebui.homelab.local
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
    - port: 443
      name: https
      protocol: TCP
      targetPort: http
