k8s/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui-ingress
  annotations:
    cert-manager.io/cluster-issuer: internal-ca-cluster-issuer
spec:
  rules:
  - host: openwebui.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              number: 443
  tls:
  - hosts:
      - openwebui.homelab.local
    secretName: openwebui-tls
